--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,5 @@ dependencies {
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:22.0.0'
-
-    
-
-
-
+    compile project(':library')
 }
