--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'info.hoang8f:fbutton:1.0.5'
     compile files('libs/lite-orm-1.9.1.jar')
     compile files('libs/lite-orm-1.9.1.jar')
+    compile 'cn.carbs.android:AvatarImageView:1.0.2'
     compile 'com.squareup.picasso:picasso:2.3.2'
 }
