--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,21 +16,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.MainActivity">
+        <activity android:name=".welcome.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< HEAD
+
         <activity android:name=".my.LoginActivity" />
         <activity android:name=".main.MainActivity" />
-        <activity android:name=".video.VideoPlayer"/>
-=======
-        <activity android:name=".video.VideoActivity" />
-        <activity android:name=".my.LoginActivity" />
-      <activity android:name=".author.authordetial.AuthorDetial"/>
->>>>>>> e283b71349e283af1900c55cd321552404596f35
+        <activity android:name=".video.VideoPlayer" />
+        <activity android:name=".author.authordetial.AuthorDetial" />
+
     </application>
 
 </manifest>
