--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ywq9682.eyepetizer">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".main.MyApp"
@@ -16,8 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".video.VideoActivity" />
-     <activity android:name=".my.LoginActivity" />
+        <activity android:name=".my.LoginActivity" />
         <activity android:name=".main.MainActivity" />
+        <activity android:name=".selection.SelectionDetailActivity" />
     </application>
 
 </manifest>
