--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".welcome.WelcomeActivity">
+        <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -24,9 +24,10 @@
         </activity>
 
         <activity android:name=".my.LoginActivity" />
-        <activity android:name=".main.MainActivity" />
+
         <activity android:name=".video.VideoPlayer" />
         <activity android:name=".author.authordetial.AuthorDetial" />
+        <activity android:name=".author.authordetial.detialnext.DetialNextActivity"/>
 
     </application>
 
