--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,14 @@ dependencies {
     compile files('libs/lite-orm-1.9.1.jar')
     compile 'cn.carbs.android:AvatarImageView:1.0.2'
     compile 'com.squareup.picasso:picasso:2.3.2'
+    compile files('libs/alipaySDK.jar')
+    compile files('libs/fuqianla.jar')
+    compile files('libs/MobCommons-2016.0707.1708.jar')
+    compile files('libs/MobTools-2016.0707.1708.jar')
+    compile files('libs/ShareSDK-Core-2.7.4.jar')
+    compile files('libs/ShareSDK-QQ-2.7.4.jar')
+    compile files('libs/ShareSDK-QZone-2.7.4.jar')
+    compile files('libs/ShareSDK-SinaWeibo-2.7.4.jar')
+    compile files('libs/ShareSDK-Wechat-Core-2.7.4.jar')
+    compile files('libs/ShareSDK-Wechat-Moments-2.7.4.jar')
 }
