修改精选页面,基本完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".video.VideoPlayer" />
         <activity android:name=".author.authordetial.AuthorDetial" />
         <activity android:name=".selection.SelectionDetailActivity" />
+        <activity android:name=".selection.SelectionWebActivity" />
     </application>
 
 </manifest>
