--- a/wqkvideoplayer/build.gradle
+++ b/wqkvideoplayer/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 19
     buildToolsVersion "21.1.2"
 
     defaultConfig {
@@ -20,6 +20,10 @@ android {
 
     lintOptions {
     abortOnError false
+    }
+    compileOptions {
+        targetCompatibility 1.7
+        sourceCompatibility 1.7
     }
 }
 
